--- a/app/src/main/res/menu/menu_deliverables.xml
+++ b/app/src/main/res/menu/menu_deliverables.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.ca.asap.activity.DeliverablesActivity">
+
+    <!-- should appear as action button -->
+    <item android:id="@+id/action_notification"
+        android:icon="@drawable/ic_message"
+        android:title="@string/notifications"
+        app:showAsAction="ifRoom" />
+
     <item android:id="@+id/initiative_resume" android:title="@string/initiative_resume"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
