--- a/app/src/main/res/layout/activity_deliverables.xml
+++ b/app/src/main/res/layout/activity_deliverables.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.ca.asap.activity.DeliverablesActivity"
-    android:background="#80CBC4"
+    android:background="@color/activity_background"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
