--- a/app/src/main/res/layout/activity_initiative_report.xml
+++ b/app/src/main/res/layout/activity_initiative_report.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.ca.asap.activity.InitiativeReportActivity"
-    android:background="#FFFDE7"
+    android:background="@color/activity_background"
     android:clickable="true">
 
     <TextView
@@ -66,9 +66,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/total_number_of_last_day_wi"
         android:id="@+id/lastDayTextView"
-        android:layout_above="@+id/withPmoTextView"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="99dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,26 +81,9 @@
         android:layout_toRightOf="@+id/lastDayTextView"
         android:layout_toEndOf="@+id/lastDayTextView" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/total_number_of_with_admin"
-        android:id="@+id/withPmoTextView"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/lateValueTextView"
-        android:layout_toStartOf="@+id/lateValueTextView"
-        android:layout_marginBottom="99dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/withPmoValueTextView"
-        android:layout_alignTop="@+id/withPmoTextView"
-        android:layout_toRightOf="@+id/withPmoTextView"
-        android:layout_toEndOf="@+id/withPmoTextView" />
+
+
 
     <LinearLayout
         android:orientation="vertical"
