--- a/app/src/main/res/layout/activity_initiatives.xml
+++ b/app/src/main/res/layout/activity_initiatives.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.ca.asap.activity.InitiativesActivity"
-    android:background="#80CBC4">
+    android:background="@color/activity_background">
 
     <ListView
         android:layout_width="wrap_content"
