--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:fitsSystemWindows="true"
+    tools:context="br.com.ca.asap.activity.LoginActivity">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -5,30 +13,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.ca.asap.activity.LoginActivity"
-    android:background="#80CBC4"
-    style="@style/Base.Widget.AppCompat.ProgressBar">
+    android:background="@color/activity_background"
+    android:theme="@style/AppTheme">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/name"
-        android:id="@+id/textView"
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/imageView"
         android:layout_alignParentTop="true"
-        android:textColor="#000000"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/password"
-        android:id="@+id/textView2"
-        android:textColor="#000000"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_below="@+id/nameEditText" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:src="@mipmap/ic_beelogo"
+        android:scaleType="fitXY" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -38,9 +34,10 @@
         android:ems="10"
         android:id="@+id/nameEditText"
         android:textColor="#000000"
-        android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="74dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -51,26 +48,30 @@
         android:ems="10"
         android:id="@+id/pwdEditText"
         android:textColor="#E8F5E9"
-        android:layout_below="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2"
+        android:text="@string/password"
+        android:layout_below="@+id/nameEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/nameEditText"
         android:layout_alignEnd="@+id/nameEditText" />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:id="@+id/login_button"
-        android:onClick="onClickLogin"
-        android:layout_below="@+id/pwdEditText"
-        android:layout_alignRight="@+id/pwdEditText"
-        android:layout_alignEnd="@+id/pwdEditText"
-        android:layout_marginTop="67dp"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2" />
-
-
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/welcome_login"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageView"
+        android:layout_toEndOf="@+id/imageView"
+        android:textStyle="italic" />
 
 
 </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fabLogin"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_arrow_forward_black_24dp" />
+
+</android.support.design.widget.CoordinatorLayout>
