--- a/app/src/main/res/layout/activity_synchronize.xml
+++ b/app/src/main/res/layout/activity_synchronize.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.ca.asap.activity.SynchronizeActivity"
-    android:background="#80CBC4"
+    android:background="@color/activity_background"
     style="@style/Base.Widget.AppCompat.ProgressBar">
 
     <ProgressBar
