--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,15 +16,7 @@
     android:background="@color/activity_background"
     android:theme="@style/AppTheme">
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@mipmap/ic_beelogo"
-        android:scaleType="fitXY" />
+
 
     <EditText
         android:layout_width="wrap_content"
@@ -34,10 +26,9 @@
         android:ems="10"
         android:id="@+id/nameEditText"
         android:textColor="#000000"
-        android:layout_below="@+id/imageView"
+        android:layout_above="@+id/pwdEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="74dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -49,11 +40,9 @@
         android:id="@+id/pwdEditText"
         android:textColor="#E8F5E9"
         android:text="@string/password"
-        android:layout_below="@+id/nameEditText"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/nameEditText"
-        android:layout_alignEnd="@+id/nameEditText" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,10 +50,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/welcome_login"
         android:id="@+id/textView"
+        android:textStyle="italic"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView"
-        android:textStyle="italic" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="42dp" />
 
 
 </RelativeLayout>
