--- a/app/src/main/res/layout/activity_deliverable_update.xml
+++ b/app/src/main/res/layout/activity_deliverable_update.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="br.com.ca.asap.activity.SendMessageActivity">
+    tools:context="br.com.ca.asap.activity.DeliverableUpdateActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
@@ -15,11 +15,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_send_message" />
+    <include layout="@layout/content_deliverable_update" />
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_arrow_forward_black_24dp" />
+        android:src="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
