--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="br.com.ca.asap.activity.LoginActivity">
+    android:id="@+id/signinCoordinatorLayout"
+    tools:context="br.com.ca.asap.activity.SignInActivity">
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -12,7 +13,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.ca.asap.activity.LoginActivity"
+    tools:context="br.com.ca.asap.activity.SignInActivity"
     android:background="@color/activity_background"
     android:theme="@style/AppTheme">
 
