--- a/app/src/main/res/layout/content_send_message.xml
+++ b/app/src/main/res/layout/content_send_message.xml
@@ -19,17 +19,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/msgEditText"
         android:layout_marginTop="37dp"
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:layout_alignParentStart="true"
+        >
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/msgEditText"
+                android:hint="@string/message"
+                 />
+    </android.support.design.widget.TextInputLayout>
 
 
 </RelativeLayout>
