--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
 
     <color name="primary">#2196F3</color>
     <color name="primary_dark">#1976D2</color>
-    <color name="accent">#00C853</color>
+    <color name="accent">#FF3D00</color>
 
     <color name="activity_background">#FFFFFF</color>
 
