--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -14,9 +14,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.ca.asap.activity.SignInActivity"
-    android:background="@color/activity_background"
-    android:theme="@style/AppTheme">
+    android:background="@color/signin_background"
+    android:theme="@style/AppTheme"
+    android:elevation="10dp">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/app_name"
+        android:id="@+id/textView"
+        android:textStyle="italic"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="60dip"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/accent" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -58,23 +71,28 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btn_login"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/welcome_login"
-        android:id="@+id/textView"
-        android:textStyle="italic"
-        android:layout_alignParentTop="true"
+        android:text="@string/login"
+        android:elevation="10dp"
+        android:background="@color/accent"
+        android:layout_below="@+id/pwdEditTextLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp" />
+        android:layout_marginTop="40dp" />
+
+    <TextView android:id="@+id/link_signup"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/signup_phrase"
+        android:gravity="center"
+        android:textSize="16dip"
+        android:layout_below="@+id/btn_login"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
 
 </RelativeLayout>
-
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fabLogin"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_arrow_forward_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
