--- a/app/src/main/res/menu/menu_initiatives.xml
+++ b/app/src/main/res/menu/menu_initiatives.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".OpenView">
 
     <!-- should appear as action button -->
-    <item android:id="@+id/action_notification"
+    <item android:id="@+id/action_refresh_messsages"
         android:icon="@drawable/ic_action_messages"
         android:title="@string/notifications"
         app:showAsAction="ifRoom" />
