--- a/app/src/main/res/menu/menu_deliverables.xml
+++ b/app/src/main/res/menu/menu_deliverables.xml
@@ -4,12 +4,12 @@
     tools:context="br.com.ca.asap.activity.DeliverablesActivity">
 
     <!-- should appear as action button -->
-    <item android:id="@+id/action_notification"
+    <item android:id="@+id/action_send_email"
         android:icon="@drawable/ic_mail"
         android:title="@string/sendEmail"
         app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/initiative_resume"
+    <item android:id="@+id/initiative_report"
         android:icon="@drawable/ic_pie_chart_outlined_white_24dp"
         android:title="@string/initiative_resume"
         android:orderInCategory="100"
