--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -29,7 +29,10 @@
         android:textSize="60dip"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/accent" />
+        android:textColor="@color/white"
+        android:typeface="serif"
+        android:elevation="10dp"
+        android:elegantTextHeight="true" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -46,8 +49,7 @@
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/nameEditText"
-                android:textColor="#000000"
-
+                android:textColor="@color/accent"
                 android:hint="@string/name" />
 
     </android.support.design.widget.TextInputLayout>
@@ -66,7 +68,7 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/pwdEditText"
-                android:textColor="#E8F5E9"
+                android:textColor="@color/accent"
                 android:hint="@string/password" />
 
     </android.support.design.widget.TextInputLayout>
@@ -77,11 +79,12 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:elevation="10dp"
-        android:background="@color/accent"
+        android:background="@color/primary_dark"
         android:layout_below="@+id/pwdEditTextLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp"
+        android:textColor="@color/white" />
 
     <TextView android:id="@+id/link_signup"
         android:layout_width="fill_parent"
