--- a/app/src/main/res/menu/menu_initiatives.xml
+++ b/app/src/main/res/menu/menu_initiatives.xml
@@ -2,21 +2,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".OpenView">
 
+    <!-- should appear as action button -->
+    <item android:id="@+id/action_show_priorities"
+        android:icon="@drawable/ic_assignment"
+        android:title="@string/share"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
+
     <!-- show messages - should appear as action button -->
     <item android:id="@+id/action_show_messages"
         android:icon="@drawable/ic_action_messages"
         android:title="@string/notifications"
-        app:showAsAction="ifRoom" />
+        android:orderInCategory="100"
+        app:showAsAction="always" />
 
     <!-- synch initiatives-->
     <item android:id="@+id/action_synch_initiatives"
-        android:icon="@drawable/ic_action_messages"
         android:title="@string/menu_synchronize_initiatives"
         app:showAsAction="never" />
 
     <!-- sign out -->
     <item android:id="@+id/action_signout"
-        android:icon="@drawable/ic_action_messages"
         android:title="@string/menu_signout"
         app:showAsAction="never" />
 
