--- a/app/src/main/res/layout/activity_show_info.xml
+++ b/app/src/main/res/layout/activity_show_info.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="br.com.ca.asap.activity.SendMessageActivity">
+    tools:context="br.com.ca.asap.activity.ShowInfoActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
@@ -15,11 +15,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_send_message" />
-
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center" android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_action_done" />
+    <include layout="@layout/content_show_info" />
 
 </android.support.design.widget.CoordinatorLayout>
