--- a/app/src/main/res/layout/row_messages_listview.xml
+++ b/app/src/main/res/layout/row_messages_listview.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/initiative_card_view"
+    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -23,7 +31,7 @@
         android:layout_below="@+id/messageTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp" />
+        android:layout_marginTop="76dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,5 +43,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-
 </RelativeLayout>
+
+</android.support.v7.widget.CardView>
