--- a/app/src/main/res/menu/menu_showmessages.xml
+++ b/app/src/main/res/menu/menu_showmessages.xml
@@ -3,9 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".OpenView">
 
     <!-- should appear as action button -->
+    <item android:id="@+id/action_send_messsage"
+        android:icon="@drawable/ic_action_send_message"
+        android:title="@string/menu_send_message"
+        app:showAsAction="ifRoom" />
+
+    <!-- should appear as action button -->
     <item android:id="@+id/action_refresh_messsages"
         android:icon="@drawable/ic_autorenew"
-        android:title="@string/notifications"
+        android:title="@string/menu_refresh_messages"
         app:showAsAction="ifRoom" />
 
 </menu>
