--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="red">#B71C1C</color>
 
     <color name="yellow_card_color">#FFFDE7</color>
-    <color name="green_card_color">#E8F5E9</color>
+    <color name="green_card_color">#F1F8E9</color>
 
 
 </resources>
