--- a/app/src/main/res/layout/activity_deliverables.xml
+++ b/app/src/main/res/layout/activity_deliverables.xml
@@ -6,14 +6,9 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/deliverables_listView"
-        android:layout_below="@+id/initiativeTextView"
-         />
-
-
+        android:id="@+id/deliverables_listView" />
 
 </LinearLayout>
