--- a/app/src/main/res/layout/content_deliverable_update.xml
+++ b/app/src/main/res/layout/content_deliverable_update.xml
@@ -27,15 +27,15 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="3dp"
         card_view:cardElevation="4dp"
-        card_view:cardUseCompatPadding="true">
+        card_view:cardUseCompatPadding="true"
+        android:layout_marginTop="10dp">
 
-        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -123,7 +123,7 @@
         android:id="@+id/currentUserTextView"
         android:layout_marginBottom="20dp"/>
 
-        </LinearLayout>
+    </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -136,14 +136,12 @@
         card_view:cardElevation="4dp"
         card_view:cardUseCompatPadding="true">
 
-
-        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -159,7 +157,7 @@
         android:id="@+id/commentsTextView"
         android:layout_marginBottom="20dp"/>
 
-        </LinearLayout>
+    </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -177,8 +175,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -222,7 +219,7 @@
         android:id="@+id/priorityCommentsTextView"
         android:layout_marginBottom="20dp"/>
 
-        </LinearLayout>
+    </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <Button
