--- a/app/src/main/res/layout/content_deliverable_update.xml
+++ b/app/src/main/res/layout/content_deliverable_update.xml
@@ -25,8 +25,8 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="1dp"
         card_view:cardUseCompatPadding="true"
         android:layout_marginTop="10dp">
 
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
-        android:id="@+id/duedateTextView"
+        android:id="@+id/dueDateTextView"
         android:layout_marginBottom="20dp"/>
 
     <TextView
@@ -132,8 +132,8 @@
         android:id="@+id/card_view2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="1dp"
         card_view:cardUseCompatPadding="true">
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
@@ -166,8 +166,8 @@
         android:id="@+id/card_view3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="1dp"
         card_view:cardUseCompatPadding="true">
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
@@ -221,13 +221,6 @@
 
     </LinearLayout>
     </android.support.v7.widget.CardView>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/prioritize_button"
-        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
 
