--- a/app/src/main/res/menu/menu_initiatives.xml
+++ b/app/src/main/res/menu/menu_initiatives.xml
@@ -5,21 +5,31 @@
     <!-- should appear as action button -->
     <item android:id="@+id/action_show_priorities"
         android:icon="@drawable/ic_assignment"
-        android:title="@string/share"
+        android:title="@string/menu_show_priorities"
         android:orderInCategory="100"
         app:showAsAction="always" />
 
-    <!-- show messages - should appear as action button -->
-    <item android:id="@+id/action_show_messages"
-        android:icon="@drawable/ic_action_messages"
-        android:title="@string/notifications"
-        android:orderInCategory="100"
+    <item android:id="@+id/action_synchronize_initiatives"
+        android:icon="@drawable/ic_action_cloud_download"
+        android:title="@string/menu_synchronize_initiatives"
+        android:orderInCategory="200"
         app:showAsAction="always" />
 
-    <!-- synch initiatives-->
-    <item android:id="@+id/action_show_info"
-        android:title="@string/menu_info"
+    <item android:id="@+id/action_add_initiative"
+        android:icon="@drawable/ic_action_add"
+        android:title="@string/menu_add_initiative"
+        android:orderInCategory="300"
         app:showAsAction="never" />
 
+    <item android:id="@+id/action_show_info"
+        android:title="@string/menu_info"
+        android:orderInCategory="400"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/action_show_messages"
+        android:icon="@drawable/ic_action_messages"
+        android:title="@string/menu_show_messages"
+        android:orderInCategory="500"
+        app:showAsAction="never" />
 
 </menu>
