--- a/app/src/main/res/menu/menu_deliverables.xml
+++ b/app/src/main/res/menu/menu_deliverables.xml
@@ -4,13 +4,6 @@
     tools:context="br.com.ca.asap.activity.DeliverablesActivity">
 
 
-    <!-- should appear as action button -->
-    <item android:id="@+id/action_show_priorities"
-        android:icon="@drawable/ic_assignment"
-        android:title="@string/menu_show_priorities"
-        android:orderInCategory="100"
-        app:showAsAction="always" />
-
     <item android:id="@+id/action_show_messages"
         android:icon="@drawable/ic_action_messages"
         android:title="@string/menu_show_messages"
@@ -34,4 +27,15 @@
         android:title="@string/initiative_resume"
         android:orderInCategory="500"
         app:showAsAction="never" />
+
+    <item android:id="@+id/action_edit_initiative"
+        android:title="@string/menu_edit"
+        android:orderInCategory="600"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/action_delete_initiative"
+        android:title="@string/menu_delete"
+        android:orderInCategory="700"
+        app:showAsAction="never" />
+
 </menu>
