--- a/app/src/main/res/menu/menu_initiatives.xml
+++ b/app/src/main/res/menu/menu_initiatives.xml
@@ -15,14 +15,16 @@
         android:orderInCategory="200"
         app:showAsAction="always" />
 
-    <item android:id="@+id/action_add_initiative"
+
+    <item android:id="@+id/action_show_all_priorities"
         android:icon="@drawable/ic_action_add"
-        android:title="@string/menu_add_initiative"
+        android:title="@string/menu_show_all_priorities"
         android:orderInCategory="300"
         app:showAsAction="never" />
 
-    <item android:id="@+id/action_show_info"
-        android:title="@string/menu_info"
+    <item android:id="@+id/action_add_initiative"
+        android:icon="@drawable/ic_action_add"
+        android:title="@string/menu_add_initiative"
         android:orderInCategory="400"
         app:showAsAction="never" />
 
@@ -30,6 +32,11 @@
         android:icon="@drawable/ic_action_messages"
         android:title="@string/menu_show_messages"
         android:orderInCategory="500"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/action_show_info"
+        android:title="@string/menu_info"
+        android:orderInCategory="600"
         app:showAsAction="never" />
 
 </menu>
